# flutter_libnfc

./: .gitmodules  .metadata  README.md  ffigen.yaml  pubspec.yaml
example/: README.md  pubspec.yaml
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
lib/: flutter_libnfc.dart  flutter_libnfc_bindings.dart
linux/: CMakeLists.txt
macos/: flutter_libnfc.podspec
macos/Classes/: flutter_libnfc.c
src/: CMakeLists.txt  flutter_libnfc.c
windows/: CMakeLists.txt
